# blockchain_on_advanced_aerial_mobility

./: .gitignore  README.md  blast.py  docker-compose.yml  requirements.txt  run.py  security_tests.py
blockchain/hyperledger/: README.md
blockchain/hyperledger/chaincode/aam_security/: go.mod  main.go
blockchain/hyperledger/network/: network.sh
blockchain/hyperledger/network/compose/: compose-aam-net.yaml
blockchain/hyperledger/network/configtx/: configtx.yaml
blockchain/hyperledger/network/organizations/cryptogen/: crypto-config-orderer.yaml  crypto-config-org1.yaml  crypto-config-org2.yaml
blockchain/hyperledger/network/scripts/: envVar.sh  utils.sh
blockchain/solana/: Anchor.toml
blockchain/solana/programs/aam_security_log/: Cargo.toml
blockchain/solana/programs/aam_security_log/src/: lib.rs
data_parser/: Cargo.toml
data_parser/src/: main.rs
database/postgres/schema/: 001_init.sql
final_paper_v1/: Makefile  main.tex  references.bib
final_paper_v1/figures/: hybrid_architecture.tex  latency_comparison.tex  system_architecture.tex
infrastructure/docker/: prometheus.yml
infrastructure/scripts/: setup.sh
infrastructure/terraform/local/: main.tf
results/: EXPERIMENT_RESULTS.md
src/: run_experiment.py
src/clients/fabric_client/: client.py
src/clients/postgres_client/: client.py
src/clients/solana_client/: client.py
src/config/: settings.py
src/event_generator/: generator.py
src/metrics/: collector.py
