[package]
name = "aam_data_parser"
version = "0.1.0"
edition = "2021"
description = "Parse UAV attack datasets into AAM SecurityEvent format for passenger drone security experiments"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
indicatif = "0.17"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
walkdir = "2.4"

[[bin]]
name = "aam_parser"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
