[package]
name = "aam_security_log"
version = "0.1.0"
description = "AAM Security Event Logging on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aam_security_log"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
